# UniverseGuide

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api/: manage.py
apps/api/modules/auth/: apps.py
apps/api/modules/core/: apps.py
apps/api/modules/earthops/: apps.py
apps/api/modules/solar/: apps.py
apps/api/universeguide/: asgi.py  urls.py  wsgi.py
apps/api/universeguide/settings/: base.py
apps/client/: package-lock.json  package.json
apps/ingestion/: celery.py
scripts/dev/: INIT_COMMANDS.md  init-project.sh
